LU-2492 obdclass: htable_lookup could miss a waking up signal

In lu_object_put(), a waking up signal is issued to hash bucket
waiting queue telling blocking thread that a dying object is freed,
but it does not take the bucket lock, without it, there is a chance
that a thread calling htable_lookup() can be added to the bucket
waiting queue and misses this waking up signal and waits forever.

Signed-off-by: Bobi Jam <bobijam@gmail.com>
Change-Id: I4bd57e944bf9167d70d97845be55241b538872df